# msomi

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
docs/: msomi-project-overview.html
src/msomi/: __init__.py  cli.py
src/msomi/ai/: analyst.py
src/msomi/alerts/: scheduler.py  telegram.py
src/msomi/backtest/: engine.py
src/msomi/core/: config.py  database.py
src/msomi/dashboard/: app.py
src/msomi/journal/: __init__.py  logger.py
src/msomi/risk/: circuit_breaker.py  manager.py  position_sizer.py
src/msomi/signals/: __init__.py  confluence.py  engine.py  indicators.py
tests/: conftest.py  test_config.py  test_risk.py  test_signals.py
