[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msomi"
version = "0.1.0"
description = "Personal AI-powered trading intelligence system for Forex and Crypto"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # Data
    "yfinance>=0.2.37",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "websockets>=12.0",
    "aiohttp>=3.9",
    # Indicators
    "pandas-ta>=0.3.14b",
    "ta>=0.11",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # AI
    "anthropic>=0.28",
    "openai>=1.35",
    # Backtesting
    "vectorbt>=0.26",
    # Alerts
    "python-telegram-bot>=21.3",
    # Dashboard
    "streamlit>=1.35",
    "plotly>=5.22",
    # Scheduler
    "APScheduler>=3.10",
    # Utilities
    "rich>=13.7",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
msomi = "msomi.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
